--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,10 @@
-aniso8601==8.0.0
-beautifulsoup4==4.8.2
-certifi==2019.11.28
-chardet==3.0.4
-Click==7.0
-Flask==1.1.1
-Flask-Cors==3.0.9
-Flask-RESTful==0.3.7
+APScheduler==3.8.1
+beautifulsoup4==4.10.0
+Flask==1.1.2
+Flask_Cors==3.0.10
+Flask_RESTful==0.3.9
 grequests==0.6.0
-gunicorn==20.0.4
-idna==2.8
-itsdangerous==1.1.0
-Jinja2==2.11.3
-MarkupSafe==1.1.1
-pytz==2019.3
-requests==2.22.0
-six==1.14.0
-soupsieve==1.9.5
-urllib3==1.26.5
-Werkzeug==0.16.1
-selenium==3.141.0
+pymongo==4.0.1
+requests==2.26.0
+selenium==4.1.0
+gunicorn==20.1.0
